@@ -204,10 +204,10 @@ http://www.wikicreole.org/
 //a[@class="url http"][@href="http://www.wikicreole.org/"][text()="http://www.wikicreole.org/"]
 http://www.wikicreole.org/.
 //a[@class="url http"][@href="http://www.wikicreole.org/"][text()="http://www.wikicreole.org/"]
-[[http://www.wikicreole.org/|Visit the WikiCreole website]]
-//a[@class="url http outside"][@href="http://www.wikicreole.org/"][text()="Visit the WikiCreole website"]
-[[http://www.wikicreole.org/|Visit the\nWikiCreole website]]
-//a[@class="url http outside"][@href="http://www.wikicreole.org/"][text()="Visit the WikiCreole website"]
+[[http://www.wikicreole.org/|Visit the **WikiCreole** website]]
+//a[@class="url http outside"][@href="http://www.wikicreole.org/"][text()="Visit the "][strong[text()="WikiCreole"]][text()=" website"]
+[[http://www.wikicreole.org/|//Visit the\nWikiCreole website//]]
+//a[@class="url http outside"][@href="http://www.wikicreole.org/"][em[text()="Visit the WikiCreole website"]]
 [[http://www.wikicreole.org/ | Visit the WikiCreole website]]
 //a[@class="url http outside"][@href="http://www.wikicreole.org/"][text()="Visit the WikiCreole website"]
 [[link]]
